--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Central Valley Low Voltage</h1>
-    <img src="Images/cvlv_logo.jpg" alt="Central Valley Low Voltage Logo">
+    <!-- <h1>Central Valley Low Voltage</h1>
+    <img src="Images/cvlv_logo.jpg" alt="Central Valley Low Voltage Logo"> -->
+
+    <div id="wrapper">
+        <Header>
+            <h1>Central Valley Low Voltage</h1>
+        </Header>
+        <main>Main</main>
+        <footer>
+            <address>
+<p>
+            Central Valley Low Voltage - Owner <br>
+            1254 Sansome St, <br>
+            Hanford, Ca 93230 
+</p>
+            </address>
+            <a href="mailto:jgovea@centralvalleylowvoltage.com">jgovea@centralvalleylowvoltage.com</a> <br>
+            <a href="tel:+1559-816-9358">Cell: 559-816-9358</a>
+        </footer>
+    </div>
 </body>
 </html>
